# Fine-Tuning-LLM-with-HuggingFace

./: .gitignore  README.md  pyproject.toml  requirements.txt
05-Fine_Tuning_BERT_for_Sentiment/: Fine_Tuning_BERT_for_Multi_Class_Sentiment_Classification_for_Twitter_Tweets.ipynb  app.py
07-Fine_Tuning_DistilBERT_MobileBERT_TinyBERT_For_Fake_News_Detection/: Fine_Tuning_DistilBERT_MobileBERT_TinyBERT_For_Fake_News_Detection.ipynb
08-Restaurant_Search_NER_Recognition_By_Fine_Tuning_DistilBERT/: Restaurant_Search_NER_Recognition_By_Fine_Tuning_DistilBERT.ipynb
09-Fine_Tuning_T5_for_Custom_Summarization_Task/: Fine Tuning T5 for Custom Summarization.ipynb
10-Fine_Tuning_ViT_for_Dogs_and_Cats_Classification/: Image Classification.ipynb
10-Fine_Tuning_ViT_for_Indian_Foods_Classification/: Image Classification.ipynb
10-Image_Classification/: Image Classification.ipynb
11-Fine_Tuning_LLM_Phi2_on_Custom_Data [Theory]/: Theory_Fine_Tuning_LLM.ipynb
11-Fine_Tuning_LLM_Phi3_on_Custom_Data/: 1_Theory_Fine_Tuning_LLM.ipynb  2_Coding_Fine_Tuning_LLM_Phi3_on_Custom_Data.ipynb
12-Fine_Tuning_LLM_Phi2_on_Custom_Data [Coding]/: Coding_Fine_Tuning_LLM_Phi2_on_Custom_Data.ipynb
13-Fine_Tuning_LLAMA_as_Chat_(Instruct)_Model/: Tiny_LLAMA_1_1B_Instruction_Tuning.ipynb
5-Fine_Tuning_BERT_for_Sentiment/: Fine_Tuning_BERT_for_Multi_Class_Sentiment_Classification_for_Twitter_Tweets.ipynb
7-Fine_Tuning_DistilBERT_MobileBERT_TinyBERT_For_Fake_News_Detection/: Fine_Tuning_DistilBERT_MobileBERT_TinyBERT_For_Fake_News_Detection.ipynb
8-Restaurant_Search_NER_Recognition_By_Fine_Tuning_DistilBERT/: 8-Restaurant_Search_NER_Recognition_By_Fine_Tuning_DistilBERT.ipynb  Restaurant_Search_NER_Recognition_By_Fine_Tuning_DistilBERT.ipynb
9-Fine_Tuning_T5_for_Custom_Summarization_Task/: Fine Tuning T5 for Custom Summarization.ipynb
(+8 files in other folders)
