[project]
name = "llm-finetuning"
version = "0.1.0"
description = "LLM Fine Tuning -- Laxmikant"
requires-python = ">=3.11, <3.14"
dependencies = [
    "torch==2.7.0+cu126",
    "torchvision==0.22.0+cu126",
    "transformers==4.57.6",
    "peft==0.19.1",
    "trl==0.29.1",
    "bitsandbytes==0.49.2",
    "evaluate==0.4.6",
    "seaborn==0.13.2",
    "scikit-learn==1.9.0",
    "soundfile==0.12.1",
    "sentencepiece==0.2.1",
    "seqeval==1.2.2",
    "umap-learn==0.5.6",
    "jupyter==1.0.0",
]

[tool.uv.sources]
torch       = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
